@@ -17,6 +17,10 @@ SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)
 # Minimum cmake version
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)
 
+if(POLICY CMP0017)
+	cmake_policy(SET CMP0017 NEW)
+endif(POLICY CMP0017)
+
 # Check modules first in local dir
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
 
@@ -25,7 +29,7 @@ SET(PACKAGE "kvirc")
 SET(NICENAME "KVIrc")
 SET(VERSION_MAJOR "4")
 SET(VERSION_BRANCH "4.0")
-SET(VERSION_RELEASE "4.0.3")
+SET(VERSION_RELEASE "4.0.4")
 
 STRING(REGEX MATCH "[0-9]+$" VERSION_MINOR ${VERSION_BRANCH})
 
