@@ -1,3 +1,21 @@
+xx.03.2011: Release 4.0.4 "Insomnia"
+###############################################################################
+
+Here we go again: 4.0.4 is ready.
+
+This is mainly a bugfix release.
+
+Configuration from existing 4.0.0/4.0.2 installations will be completly preserved
+and everyone is encouraged to upgrade.
+
+As usual, the bugs for this release should be reported by using the bugtrack
+system available at https://svn.kvirc.de/kvirc/
+
+Have fun :)
+Szymon Tomasz Stefanek and The KVIrc Development Team
+
+
+
 01.08.2010: Release 4.0.2 "Insomnia"
 ###############################################################################
 
