@@ -36,8 +36,8 @@
 * \def KVI_SOURCES_DATE Defines the sources date
 * \def KVI_SOURCES_DATE_NUMERIC Defines the sources date
 */
-#define KVI_SOURCES_DATE "20101102"
-#define KVI_SOURCES_DATE_NUMERIC 0x20101102
+#define KVI_SOURCES_DATE "20110308"
+#define KVI_SOURCES_DATE_NUMERIC 0x20110308
 
 /**
 * \brief This is the date of the sources before that we should force a setup
