@@ -205,7 +205,12 @@ bool KviKvsProcessAsyncOperation::trigger(CallbackEvent e,const QString &szData)
 		}
 
 		params.append(new KviKvsVariant(szData));
-		if (m_pData->pMagic) params.append(m_pData->pMagic);
+		if(m_pData->pMagic) 
+		{ 
+			KviKvsVariant * pTmp = new KviKvsVariant(); 
+			pTmp->copyFrom(m_pData->pMagic); 
+			params.append(pTmp); 
+		} 
 
 		KviKvsVariant retVal;
 		int iRet = m_pData->pCallback->run(m_pData->pWnd,&params,&retVal,KviKvsScript::PreserveParams,m_pExtendedRunTimeData);
