@@ -2,9 +2,10 @@ This is KVIrc's changelog. It tipically lists new added features and changes tha
 kvirc's previous behaviour. For a more detailed (and up to date) log, point your browser at:
   https://svn.kvirc.de/kvirc/timeline
 
-Jul 2010
+
+Jul 2010 - March 2011
    [KVIrc dev team]
-   - Fixes for some major bugs reported on trac
+   - Branch 4.0 freezed; Fixes for the major bugs reported on trac
 
 Jun 2010
    [Pragma]
